--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -4,6 +4,8 @@
   <div>
     <label for="hero-name">Hero name: </label>
     <input id="hero-name" [(ngModel)]="hero.name" placeholder="name">
+    <div><span>Power: </span>{{hero.power}}</div>
+    <div *ngIf="hero.alterEgo"><span>Alter Ego: </span>{{hero.alterEgo}}</div>
     <button (click)="save()">save</button>
     <button (click)="goBack()">go back</button>
   </div>
