--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,13 +1,5 @@
 <h2>My Heroes</h2>
-<div>
-  <label id="new-hero">Hero name: </label>
-  <input for="new-hero" #heroName />
-
-  <!-- (click) passes input value to add() and then clears the input -->
-  <button class="add-button" (click)="add(heroName.value); heroName.value=''">
-    Add hero
-  </button>
-</div>
+<app-hero-form></app-hero-form>
 <ul class="heroes">
   <li *ngFor="let hero of heroes">
     <a routerLink="/detail/{{hero.id}}">
