form works, but not perfectly

--- a/src/app/hero-form/hero-form.component.html
+++ b/src/app/hero-form/hero-form.component.html
@@ -1,5 +1,5 @@
   <div>
-    <form (ngSubmit)="add(name, pow, alterEgo)">
+    <form (ngSubmit)="add(name.value, pow.value, alterEgo.value)">
       <label id="new-hero" for="name">Hero name: </label>
       <input
       type="text"
