--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,7 @@
 /* Application-wide Styles */
+
+@import "~ng-zorro-antd/ng-zorro-antd.min.css";
+
 h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
